# ray-whisper-live

./: .gitignore  README.md  __init__.py  benchmark.py  client.py  environment.yml  pyproject.toml  requirements.txt  serve.py  server_deployment.py  test_transcriber.py  transcriber_deployment.py  vad_deployment.py
.github/workflows/: ci.yml
src/: __init__.py  config.py  gpu_profiler.py  language_detector.py  server.py  session.py  transcriber.py  vad.py
tests/: conftest.py  test_config.py  test_gpu_profiler.py  test_language_detector.py  test_server.py  test_session.py  test_transcriber.py  test_vad.py
